<?xml version="1.0"?>
<package format="2">
  <name>mapping</name>
  <version>0.0.1</version>
  <description>mapping's main launch files.</description>
  <maintainer email="matlabbe@gmail.com">Mathieu Labbe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rtabmap_costmap_plugins</exec_depend>
  <exec_depend>rtabmap_msgs</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_rviz_plugins</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_util</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>
</package>
